# PrivacyLayer

./: .gitignore  AMBASSADOR_PROGRAM.md  BOUNTY_DELIVERY.md  BUG_BOUNTY_PROGRAM.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  LICENSE  LOAD_STRESS_TEST_REPORT.md  MAINNET_CHECKLIST.md  MAINNET_LAUNCH_CHECKLIST.md  MONITORING_SETUP.md  README.md  SDK_DOCUMENTATION_GUIDE.md  SECURITY.md  TESTING_README.md  TESTNET_URLS.md  TEST_REPORT.md  TEST_REPORT_2026-04-08.md  THREAT_MODEL.json  THREAT_MODEL.md  USER_GUIDE.md  backup.sh  constraint-snapshot.js  fix_100.py  fix_101.py  fix_43.py  fix_97.py  fix_98.py  fix_99.py  hackathon-starter-kit.md  load-test.js  openapi.yaml  package.json  robots.txt  sitemap.xml  stress-test.js  zk-benchmark.js
.github/: README.md
SECURITY_GUIDE/: code_reviews_and_testing.md  secure_coding_guidelines.md  secure_versioning_and_dependencies.md  toc.md
api-docs/: README.md  contract-abi.json  openapi.yaml
bug-bounty/: README.md  platform-setup.md  rewards.md  scope.md  submission.md
circuits/: Nargo.toml  TEST_VECTORS.md  edge_case_tests.nr  integration_test.nr
contracts/fuzz/: Cargo.toml  FUZZING_REPORT.md  README.md  lib.rs  run_all_fuzz.sh
contracts/fuzz/fuzz_targets/: fuzz_admin.rs  fuzz_deposit.rs  fuzz_merkle.rs  fuzz_storage.rs  fuzz_withdraw.rs
docs/: AMBASSADOR_PROGRAM.md  API.md  ARCHITECTURE.md  BUG_BOUNTY_PROGRAM.md  COMMUNITY_FORUM_SETUP.md  DEPLOYMENT.md  DISASTER_RECOVERY.md  DISASTER_RECOVERY_PLAN.md  ESCROW_SERVICE_DESIGN.md  FAQ.md  HACKATHON_STARTER_KIT.md  MAINNET_LAUNCH_CHECKLIST.md  PAYROLL_SYSTEM_DESIGN.md  README.md  (+29 more)
(+483 files in other folders)
