[package]
name = "privacylayer-fuzz"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
soroban-sdk = { version = "22.0", features = ["testutils"] }
arbitrary = { version = "1.3", features = ["derive"] }
libfuzzer-sys = "0.4"

# Helper library (if needed)
[lib]
path = "lib.rs"

# Fuzz targets
[[bin]]
name = "fuzz_merkle"
path = "fuzz_targets/fuzz_merkle.rs"
test = false
doc = false

[[bin]]
name = "fuzz_deposit"
path = "fuzz_targets/fuzz_deposit.rs"
test = false
doc = false

[[bin]]
name = "fuzz_withdraw"
path = "fuzz_targets/fuzz_withdraw.rs"
test = false
doc = false

[[bin]]
name = "fuzz_admin"
path = "fuzz_targets/fuzz_admin.rs"
test = false
doc = false

[[bin]]
name = "fuzz_storage"
path = "fuzz_targets/fuzz_storage.rs"
test = false
doc = false

[profile.release]
debug = 1
